--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(predict,lpqr)
 S3method(print,cnqr)
 S3method(score,cnqr)
 S3method(summary,cnqr)
+export()
 export(FYgX)
 export(QYgX)
 export(adddat)
@@ -35,9 +36,7 @@ export(plotcop_score)
 export(qgpdm)
 export(rho)
 export(score)
-export(score_eval)
 export(score_forecaster)
-export(scoreq)
 export(scoreqf)
 export(scorer)
 export(space_taus)
